# CalcFlow

./: CMakeLists.txt  CalcViscocity.json  calc.cpp  calc.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  tempmodel.cpp  tempmodel.h  timer.h  Лист Microsoft Excel.xlsx
